--- a/cv.html
+++ b/cv.html
@@ -1919,6 +1919,21 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <h3>Other</h3>
       </div></div>
 
+      <!-- 2020
+           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+      <br/><div class="cv">
+      <div class="year">
+      <h4>2020</h4>
+      </div><div class="title">
+      <h4>&emsp;<a href="https://siefrancia.com/jornada-y-asamblea-anual-2020/">Jornada y Asamblea Anual 2020 de la SIEF</a></h4></div>
+      <div class="year"></div><div class="title">
+      <h4>&ensp;&emsp;<em>(2020 Conference and Annual Assembly of the SIEF)</em></h4></div>
+        <div class="property">Organizer:</div><div class="value"><a href="https://siefrancia.com/">Sociedad de Investigadores Españoles en Francia (SIEF)</a></div>
+        <div class="property">Location:</div><div class="value">France (On-line due to COVID-19)</div>
+        <div class="property">Date:</div><div class="value">28th of November of 2020</div>
+      </div>
+
 
 <!-- 2017
      YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
