--- a/cv_es.html
+++ b/cv_es.html
@@ -519,7 +519,7 @@
          <br/><div class="cv">
          <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC'20)</a></h4></div>
            <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces<span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Diapositivas</a> / <a href="https://www.youtube.com/watch?v=OmXZw7ZbCsA">Vídeo</a></span></div>
-           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por el COVID-19)</div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la COVID-19)</div>
          </div>
 
          <br/><div class="cv">
@@ -771,7 +771,7 @@
     <div class="pretalktitle"></div><div class="talktitle">Co-organizador</div>
       <div class="property">Descripción:</div><div class="value">23 charlas en 12 horas (tentativa)</div>
       <div class="property">Organizador:</div><div class="value">Diego Armentano, Matías Bender, Alperen A. Erg&uuml;r y Josu&eacute; Tonelli-Cueto</div>
-      <div class="property">Lugar:</div><div class="value">Buenos Aires, Argentina (On-line por el COVID-19)</div>
+      <div class="property">Lugar:</div><div class="value">Buenos Aires, Argentina (On-line por la COVID-19)</div>
       <div class="property">Fecha:</div><div class="value">del 19 al 24 de julio del 2021</div>
     </div>
 
@@ -784,7 +784,7 @@
    </div><div class="title">
    <h4>&emsp;<a href="#3rdBYMAT">3rd BYMAT Conference</a></h4></div>
    <div class="pretalktitle"></div><div class="talktitle">Miembro del Comité Científico</div>
-     <div class="property">Location:</div><div class="value">Valencia, España (On-line por el COVID-19)</div>
+     <div class="property">Location:</div><div class="value">Valencia, España (On-line por la COVID-19)</div>
      <div class="property">Date:</div><div class="value">del 1 al 3 de diciembre del 2020</div>
    </div>
 
@@ -1250,7 +1250,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <h4>&ensp;&emsp;<em>(Congreso Matemático de las Américas 2021)</em></h4></div>
   <div class="property">Organizador:</div><div class="value"><a href="http://www.mcofamericas.org/">Mathematical Council of the Americas (MCofA)</a></div>
   <div class="property">Institución anfitriona:</div><div class="value"><a href="http://www.uba.ar/">Universidad de Buenaos Aires</a></div>
-  <div class="property">Lugar:</div><div class="value">Buenos Aires, Argentina (On-line por el COVID-19)</div>
+  <div class="property">Lugar:</div><div class="value">Buenos Aires, Argentina (On-line por la COVID-19)</div>
   <div class="property">Fecha:</div><div class="value">del 19 al 24 de julio del 2021</div>
 </div>
 
@@ -1265,7 +1265,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Organizador:</div><div class="value">Ana Navarro Quiles, Eva Primo Tárraga, Clara Burgos Simón, David Martínez Rodríguez, Elena López Navarro, Alberto Espuny Díaz, Miguel Reula Martín, José Alberto Conejero Casares y Patricio Almirón Cuadros</div>
   <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.uv.es/">Universitat de València</a></div>
   <div class="property"></div><div class="value"><a href="https://www.upv.es/">Universitat Politècnica de València</a></div>
-  <div class="property">Lugar:</div><div class="value">Valencia, España (On-line por el COVID-19)</div>
+  <div class="property">Lugar:</div><div class="value">Valencia, España (On-line por la COVID-19)</div>
   <div class="property">Fecha:</div><div class="value">del 1 al 3 de diciembre del 2020</div>
 </div>
 
@@ -1281,7 +1281,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Organizador:</div><div class="value">Timo Berthold and Thorsten Koch</div>
   <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.tu-berlin.de/menue/home/">Technische Universit&auml;t Berlin</a></div>
   <div class="property"></div><div class="value"><a href="https://www.zib.de/">Zuse Institut Berlin</a></div>
-  <div class="property">Lugar:</div><div class="value">Berlin, Germany (On-line por el COVID-19)</div>
+  <div class="property">Lugar:</div><div class="value">Berlin, Germany (On-line por la COVID-19)</div>
   <div class="property">Fecha:</div><div class="value">del 14 al 25 de septiembre del 2020</div>
 </div>
 
@@ -1302,7 +1302,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property"></div><div class="value">Wen-Shin Lee (Tutorial Chair)</div>
   <div class="property"></div><div class="value">Jonathan Hauenstein (Software Presentations Chair)</div>
   <div class="property"></div><div class="value">J. Maurice Rojas (Poster Chair)</div></div>
-  <div class="property">Lugar:</div><div class="value">Kalamata, Grecia (On-line por el COVID-19)</div>
+  <div class="property">Lugar:</div><div class="value">Kalamata, Grecia (On-line por la COVID-19)</div>
   <div class="property">Fecha:</div><div class="value">del 20 al 23 de julio del 2020</div>
 </div>
 
@@ -1978,6 +1978,19 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <br/><div class="row"><div class="col-md-12">
       <h3>Otras</h3>
       </div></div>
+
+<!-- 2020
+     YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+      <br/><div class="cv">
+      <div class="year">
+      <h4>2020</h4>
+      </div><div class="title">
+      <h4>&emsp;<a href="https://siefrancia.com/jornada-y-asamblea-anual-2020/">Jornada y Asamblea Anual 2020 de la SIEF</a></h4></div>
+        <div class="property">Organizador:</div><div class="value"><a href="https://siefrancia.com/">Sociedad de Investigadores Españoles en Francia (SIEF)</a></div>
+        <div class="property">Lugar:</div><div class="value">Francia (On-line por la COVID-19)</div>
+        <div class="property">Date:</div><div class="value">28 de noviembre del 2020</div>
+      </div>
 
 
 <!-- 2017
