--- a/cv_es.html
+++ b/cv_es.html
@@ -783,7 +783,7 @@
    <h4>2020</h4>
    </div><div class="title">
    <h4>&emsp;<a href="#3rdBYMAT">3rd BYMAT Conference</a></h4></div>
-   <div class="pretalktitle"></div><div class="talktitle">Miembro del Comité Científico</div>
+   <div class="pretalktitle"></div><div class="talktitle">Miembro del Comité Científico y del Comité de Pósteres</div>
      <div class="property">Location:</div><div class="value">Valencia, España (On-line por la COVID-19)</div>
      <div class="property">Date:</div><div class="value">del 1 al 3 de diciembre del 2020</div>
    </div>
