--- a/cv.html
+++ b/cv.html
@@ -800,7 +800,7 @@
    <h4>2020</h4>
    </div><div class="title">
    <h4>&emsp;<a href="#3rdBYMAT">3rd BYMAT Conference</a></h4></div>
-   <div class="pretalktitle"></div><div class="talktitle">Member of the Scientific Committee</div>
+   <div class="pretalktitle"></div><div class="talktitle">Member of the Scientific Committee and of the Poster Committee</div>
      <div class="property">Location:</div><div class="value">Valencia, Spain (On-line due to COVID-19)</div>
      <div class="property">Date:</div><div class="value">1st to 3rd of December of 2020</div>
    </div>
