--- a/cv_es.html
+++ b/cv_es.html
@@ -445,14 +445,21 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> and <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
-       <div class="pretalktitle"></div><div class="collaborator">This is a journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
+      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
+      <div class="year"></div><div class="paper"><h4>&emsp;I: Univariate Polynomials and Hypersurfaces</h4></div>
+      <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a>)</div>
+      <div class="pretalktitle"></div><div class="collaborator">Esta es una versión de revista de <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em>.</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> y <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
+       <div class="pretalktitle"></div><div class="collaborator">Esta es una versión de revista de <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
       </div>
 
       <br/><div class="cv">
       <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a> and <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a>)</div>
+       <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a> y <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a>)</div>
       </div>
 
       <br/><div class="row"><div class="col-md-12">
@@ -461,13 +468,13 @@
 
       <br/><div class="cv">
       <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas, <i>Foundations of Computational Mathematics</i>, 20(1):71-119, 2020. First on-line: May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
+       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker y J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas (Inglés) [Computando la Homología de los Conjuntos Semialgebraicos. I: Fórmulas Laxas], <i>Foundations of Computational Mathematics</i>, 20(1):71-119, 2020. First on-line: May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
       </div>
 
       <br/><div class="cv">
       <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;On the Number of Real Zeros of Random Fewnomials
       <a class="btn btn-arxiv" href="https://arxiv.org/abs/1811.09425"  role="button">arXiv:1811.09425</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator"> P. B&uuml;rgisser, A.A. Erg&uuml;r and J. Tonelli-Cueto. On the Number of Real Zeros of Random Fewnomials, <i>SIAM Journal on Applied Algebra and Geometry</i>, 3(4):721–732, 2019. <span><a href="https://doi.org/10.1137/18M1228682">DOI 10.1137/18M1228682</a></span></div>
+       <div class="pretalktitle"></div><div class="collaborator"> P. B&uuml;rgisser, A.A. Erg&uuml;r y J. Tonelli-Cueto. On the Number of Real Zeros of Random Fewnomials (Inglés) [Sobre el Número de Ceros Reales de los Oligonomios Aleatorios], <i>SIAM Journal on Applied Algebra and Geometry</i>, 3(4):721–732, 2019. <span><a href="https://doi.org/10.1137/18M1228682">DOI 10.1137/18M1228682</a></span></div>
       </div>
 
       <br/><div class="row"><div class="col-md-12">
@@ -475,15 +482,15 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
+      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423v1" role="button">arXiv:2006.04423v1</a></h4></div>
       <div class="year"></div><div class="paper"><h4>&emsp;I: Univariate Polynomials and Hypersurfaces</h4></div>
-      <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2020 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, pages 434-441. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3373207.3404054?cid=99659444592">[Author-Ized LINK]</a></span></div>
+      <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto y E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces (Inglés) [Números de Condición para el Cubo. I: Polinomios Univariados e Hipersuperficies]. En <i>Proceedings of the 2020 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, páginas 434-441. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3373207.3404054?cid=99659444592">[Author-Ized LINK]</a></span></div>
       </div>
 
 
       <br/><div class="cv">
       <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Plantinga-Vegter algorithm takes average polynomial time<a class="btn btn-arxiv" href="https://arxiv.org/abs/1901.09234"  role="button">arXiv:1901.09234</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2019 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'19, pages 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-Ized LINK]</a></span></div>
+       <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r y J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time (Inglés) [El Algoritmo de Plantinga-Vegter toma Tiempo Promedio Polinónimo]. En <i>Proceedings of the 2019 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'19, páginas 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-Ized LINK]</a></span></div>
       </div>
 
 
