--- a/cv.html
+++ b/cv.html
@@ -462,7 +462,14 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
+      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
+      <div class="year"></div><div class="paper"><h4>&emsp;I: Univariate Polynomials and Hypersurfaces</h4></div>
+      <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a>)</div>
+      <div class="pretalktitle"></div><div class="collaborator">This is a journal version of <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em>.</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
        <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> and <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
        <div class="pretalktitle"></div><div class="collaborator">This is a journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
       </div>
@@ -492,9 +499,9 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
+      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423v1" role="button">arXiv:2006.04423v1</a></h4></div>
       <div class="year"></div><div class="paper"><h4>&emsp;I: Univariate Polynomials and Hypersurfaces</h4></div>
-      <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2020 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, pages 434-441. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3373207.3404054?cid=99659444592">[Author-Ized LINK]</a></span></div>
+      <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces. In <i>Proceedings of the 2020 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, pages 434-441. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3373207.3404054?cid=99659444592">[Author-Ized LINK]</a></span></div>
       </div>
 
 
