FoCM paper. Part II

--- a/cv_es.html
+++ b/cv_es.html
@@ -457,14 +457,14 @@
        <div class="pretalktitle"></div><div class="collaborator">Esta es una versión de revista de <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
       </div>
 
-      <br/><div class="cv">
-      <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a> y <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a>)</div>
-      </div>
-
       <br/><div class="row"><div class="col-md-12">
       <h3>Artículos científicos de revista</h3>
       </div></div>
+
+      <br/><div class="cv">
+      <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. II: General Formulas (Inglés) [Computando la Homología de los Conjuntos Semialgebraicos. II: Fórmulas Generales], <i>Foundations of Computational Mathematics</i>. First on-line: January 2021. <span><a href="https://doi.org/10.1007/s10208-020-09483-8">DOI 10.1007/s10208-020-09483-8</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cc3Eq">[SharedIt LINK]</a></span></div>
+      </div>
 
       <br/><div class="cv">
       <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
