--- a/cv_es.html
+++ b/cv_es.html
@@ -445,8 +445,13 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
-      <div class="year"></div><div class="paper"><h4>&emsp;I: Univariate Polynomials and Hypersurfaces</h4></div>
+       <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Functional norms, condition numbers<br/>&emsp;and numerical algorithms in algebraic geometry<a class="btn btn-arxiv" href="https://arxiv.org/abs/2102.11727" role="button">arXiv:2102.11727</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> y <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
+       <div class="pretalktitle"></div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
       <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a>)</div>
       <div class="pretalktitle"></div><div class="collaborator">Esta es una versión de revista de <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em>.</div>
       </div>
@@ -482,8 +487,7 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423v1" role="button">arXiv:2006.04423v1</a></h4></div>
-      <div class="year"></div><div class="paper"><h4>&emsp;I: Univariate Polynomials and Hypersurfaces</h4></div>
+      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423v1" role="button">arXiv:2006.04423v1</a></h4></div>
       <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto y E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces (Inglés) [Números de Condición para el Cubo. I: Polinomios Univariados e Hipersuperficies]. En <i>Proceedings of the 2020 International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, páginas 434-441. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3373207.3404054?cid=99659444592">[Author-Ized LINK]</a></span></div>
       </div>
 
