Links to PIkasle!

--- a/cv.html
+++ b/cv.html
@@ -653,6 +653,15 @@
       </div></div>
 
       <br/><div class="cv">
+      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2020ws/kolloquium_oberseminar/">Kolloquium des Fachgebiets Algorithmische Algebra der TU Berlin</a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminar of the Algorithmic Algebra Group of TU Berlin)</em></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle"><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2020ws/kolloquium_oberseminar/#c1020110">Towards Finite Expectation in the Numerical Computation of the Homology of Semialgebraic Sets</a></div>
+        <div class="property">Institution:</div><div class="value"><a href="https://www.tu.berlin/">Technische Universität Berlin</a></div>
+        <div class="property">Location:</div><div class="value">Berlin, Germany (On-line)</div>
+        <div class="property">Date:</div><div class="value">10th of February of 2021</div>
+      </div>
+
+      <br/><div class="cv">
       <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;Seminar of the OURAGAN team of Inria Paris</h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces<span style="float:right;"><a href="pdf/OURAGAN30062020_slides.pdf">Slides</a></span></div>
         <div class="property">Institution:</div><div class="value"><a href="">Inria Paris</a></div>
@@ -964,7 +973,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <div class="year">
       <h4>2011-14</h4>
       </div><div class="title">
-      <h4>&emsp;Revista \(\pi kasle\) Aldizkaria<a class="btn btn-pikasle" href="pikasle_en.html" role="button" style="width:22em;">Detailed information, content and issues</a></h4></div>
+      <h4>&emsp;Revista \(\pi kasle\) Aldizkaria<a class="btn btn-pikasle" href="https://pikasle.com/" role="button" style="width:22em;">Detailed information, content and issues</a></h4></div>
       <div class="year"></div><div class="title">
       <h4>&emsp;&ensp;<em>(Magazine \(\pi kasle\))</em></h4></div>
         <div class="property">ISSN:</div><div class="value">2174-9027 (digital edition) and 2255-5714 (printed edition)</div>
