--- a/cv_es.html
+++ b/cv_es.html
@@ -636,11 +636,20 @@
       </div></div>
 
       <br/><div class="cv">
+      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2020ws/kolloquium_oberseminar/">Kolloquium des Fachgebiets Algorithmische Algebra der TU Berlin</a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminario del Grupo de Álgebra Algorítmica de la TU Berlin)</em></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle"><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2020ws/kolloquium_oberseminar/#c1020110">Towards Finite Expectation in the Numerical Computation of the Homology of Semialgebraic Sets</a></div>
+        <div class="property">Institución:</div><div class="value"><a href="https://www.tu.berlin/">Technische Universität Berlin</a></div>
+        <div class="property">Lugar:</div><div class="value">Berlin, Alemania (On-line)</div>
+        <div class="property">Fecha:</div><div class="value">10 de febrero del 2021</div>
+      </div>
+
+      <br/><div class="cv">
       <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;Seminario del equipo OURAGAN de Inria Paris</h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces<span style="float:right;"><a href="pdf/OURAGAN30062020_slides.pdf">Slides</a></span></div>
         <div class="property">Institución:</div><div class="value"><a href="">Inria Paris</a></div>
         <div class="property">Lugar:</div><div class="value">Par&iacute;s, Francia (On-line)</div>
-        <div class="property">Lugar:</div><div class="value">30 de junio del 2020</div>
+        <div class="property">Fecha:</div><div class="value">30 de junio del 2020</div>
       </div>
 
       <br/><div class="cv">
@@ -648,7 +657,7 @@
        <div class="pretalktitle"></div><div class="talktitle">Computing the Homology of Semialgebraic Sets in Weak Exponential Time</div>
         <div class="property">Institución:</div><div class="value"><a href="https://www.ehu.eus/en/">Universidad del País Vasco (UPV/EHU)</a></div>
         <div class="property">Lugar:</div><div class="value">Leioa, España</div>
-        <div class="property">Lugar:</div><div class="value">2 de mayo del 2019</div>
+        <div class="property">Fecha:</div><div class="value">2 de mayo del 2019</div>
       </div>
 
       <br/><div class="cv">
@@ -962,7 +971,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <div class="year">
       <h4>2011-14</h4>
       </div><div class="title">
-      <h4>&emsp;Revista \(\pi kasle\) Aldizkaria<a class="btn btn-pikasle" href="pikasle_en.html" role="button" style="width:22em;">Información detallada, contenido y números</a></h4></div>
+      <h4>&emsp;Revista \(\pi kasle\) Aldizkaria<a class="btn btn-pikasle" href="https://pikasle.com/" role="button" style="width:22em;">Información detallada, contenido y números</a></h4></div>
         <div class="property">ISSN:</div><div class="value">2174-9027 (edición digital) y 2255-5714 (edición impresa)</div>
         <div class="property">Fundadores:</div><div class="value"><a href="http://math.mit.edu/~rgi/">Ricardo Grande</a> y Josu&eacute; Tonelli-Cueto</div>
         <div class="property">Papel:</div><div class="value">Miembro del comité editorial</div>
