--- a/index_es.html
+++ b/index_es.html
@@ -109,7 +109,7 @@
             <a class="btn btn-secondary" href="aboutme.html" role="button" style="width:80%;">Sobre mi</a>
           </div>
           <div class="col">
-            <a class="btn btn-pikasle"  href="pikasle_en.html" role="button" style="width:80%;">$\pi kasle$</a>
+            <a class="btn btn-pikasle"  href="https://pikasle.com/" role="button" style="width:80%;">$\pi kasle$</a>
           </div>
       </div>
       <div class="row" align="center" style="padding-top:2vw;font-size:2vw;">
