--- a/multimedia.html
+++ b/multimedia.html
@@ -135,64 +135,64 @@
   <h3 id="pikaslecovers" style="padding-top:1em;">Designed covers for the magazine $\pi kasle$</h3>
   <div class="row" style="padding-top:1em;">
   <div class="col-md-4" style="text-align:center;">
-  <a href="pikasle/PIkasle01.pdf"><img style="width:90%;" src="pikasle/portada01red.jpg" alt="Cover of Issue N. 1 of PIkasle"/></a>
+  <a href="https://pikasle.com/pikasle/PIkasle01.pdf"><img style="width:90%;" src="pikasle/portada01red.jpg" alt="Cover of Issue N. 1 of PIkasle"/></a>
   <p style="margin:0;text-align:center;"><b>$\pi kasle$ Issue 1<br/>October 2011</b>
-  </p><span><a style="float:left;" href="pikasle/PIkasle01.pdf">&ensp;PDF of the issue&ensp;</a>
-  <a style="float:right;" href="pikasle/portada01.jpg">&ensp;Cover of the issue&ensp;</a></span>
+  </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle01.pdf">&ensp;PDF of the issue&ensp;</a>
+  <a style="float:right;" href="https://pikasle.com/pikasle/portada01.jpg">&ensp;Cover of the issue&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
-  <a href="pikasle/PIkasle02.pdf"><img style="width:90%;" src="pikasle/portada02red.jpg" alt="Cover of Issue N. 2 of PIkasle"/></a>
+  <a href="https://pikasle.com/pikasle/PIkasle02.pdf"><img style="width:90%;" src="pikasle/portada02red.jpg" alt="Cover of Issue N. 2 of PIkasle"/></a>
   <p style="margin:0;text-align:center;"><b>$\pi kasle$ Issue 2<br/>November-December 2011</b>
-  </p><span><a style="float:left;" href="pikasle/PIkasle02.pdf">&ensp;PDF of the issue&ensp;</a>
-  <a style="float:right;" href="pikasle/portada02.jpg">&ensp;Cover of the issue&ensp;</a></span>
+  </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle02.pdf">&ensp;PDF of the issue&ensp;</a>
+  <a style="float:right;" href="https://pikasle.com/pikasle/portada02.jpg">&ensp;Cover of the issue&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
-  <a href="pikasle/PIkasle03.pdf"><img style="width:90%;" src="pikasle/portada03red.jpg" alt="Cover of Issue N. 3 of PIkasle"/></a>
+  <a href="https://pikasle.com/pikasle/PIkasle03.pdf"><img style="width:90%;" src="pikasle/portada03red.jpg" alt="Cover of Issue N. 3 of PIkasle"/></a>
   <p style="margin:0;text-align:center;"><b>$\pi kasle$ Issue 3<br/>January-February 2012</b>
-  </p><span><a style="float:left;" href="pikasle/PIkasle03.pdf">&ensp;PDF of the issue&ensp;</a>
-  <a style="float:right;" href="pikasle/portada03.jpg">&ensp;Cover of the issue&ensp;</a></span>
+  </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle03.pdf">&ensp;PDF of the issue&ensp;</a>
+  <a style="float:right;" href="https://pikasle.com/pikasle/portada03.jpg">&ensp;Cover of the issue&ensp;</a></span>
   </div>
   </div>
   <div class="row" style="padding-top:3em;">
   <div class="col-md-4" style="text-align:center;">
-  <a href="pikasle/PIkasle04.pdf"><img style="width:90%;" src="pikasle/portada04red.jpg" alt="Cover of Issue N. 4 of PIkasle"/></a>
+  <a href="https://pikasle.com/pikasle/PIkasle04.pdf"><img style="width:90%;" src="pikasle/portada04red.jpg" alt="Cover of Issue N. 4 of PIkasle"/></a>
   <p style="margin:0;text-align:center;"><b>$\pi kasle$ Issue 4<br/>March-April 2012</b>
-  </p><span><a style="float:left;" href="pikasle/PIkasle04.pdf">&ensp;PDF of the issue&ensp;</a>
-  <a style="float:right;" href="pikasle/portada04.jpg">&ensp;Cover of the issue&ensp;</a></span>
+  </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle04.pdf">&ensp;PDF of the issue&ensp;</a>
+  <a style="float:right;" href="https://pikasle.com/pikasle/portada04.jpg">&ensp;Cover of the issue&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
-  <a href="pikasle/PIkasle05.pdf"><img style="width:90%;" src="pikasle/portada05red.jpg" alt="Cover of Issue N. 5 of PIkasle"/></a>
+  <a href="https://pikasle.com/pikasle/PIkasle05.pdf"><img style="width:90%;" src="pikasle/portada05red.jpg" alt="Cover of Issue N. 5 of PIkasle"/></a>
   <p style="margin:0;text-align:center;"><b>$\pi kasle$ Issue 5<br/>September-October 2012</b>
-  </p><span><a style="float:left;" href="pikasle/PIkasle05.pdf">&ensp;PDF of the issue&ensp;</a>
-  <a style="float:right;" href="pikasle/portada05.jpg">&ensp;Cover of the issue&ensp;</a></span>
+  </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle05.pdf">&ensp;PDF of the issue&ensp;</a>
+  <a style="float:right;" href="https://pikasle.com/pikasle/portada05.jpg">&ensp;Cover of the issue&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
-  <a href="pikasle/PIkasle06.pdf"><img style="width:90%;" src="pikasle/portada06red.jpg" alt="Cover of Issue N. 6 of PIkasle"/></a>
+  <a href="https://pikasle.com/pikasle/PIkasle06.pdf"><img style="width:90%;" src="pikasle/portada06red.jpg" alt="Cover of Issue N. 6 of PIkasle"/></a>
   <p style="margin:0;text-align:center;"><b>$\pi kasle$ Issue 6<br/>November-December 2012/January 2013</b>
-  </p><span><a style="float:left;" href="pikasle/PIkasle06.pdf">&ensp;PDF of the issue&ensp;</a>
-  <a style="float:right;" href="pikasle/portada06.jpg">&ensp;Cover of the issue&ensp;</a></span>
+  </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle06.pdf">&ensp;PDF of the issue&ensp;</a>
+  <a style="float:right;" href="https://pikasle.com/pikasle/portada06.jpg">&ensp;Cover of the issue&ensp;</a></span>
   </div>
   </div>
 
 
   <div class="row" style="padding-top:3em;">
   <div class="col-md-4" style="text-align:center;">
-  <a href="pikasle/PIkasle07.pdf"><img style="width:90%;" src="pikasle/portada07red.jpg" alt="Cover of Issue N. 7 of PIkasle"/></a>
+  <a href="https://pikasle.com/pikasle/PIkasle07.pdf"><img style="width:90%;" src="pikasle/portada07red.jpg" alt="Cover of Issue N. 7 of PIkasle"/></a>
   <p style="margin:0;text-align:center;"><b>$\pi kasle$ Issue 7<br/>February-March-April-May 2013</b>
-  </p><span><a style="float:left;" href="pikasle/PIkasle07.pdf">&ensp;PDF of the issue&ensp;</a>
-  <a style="float:right;" href="pikasle/portada07.jpg">&ensp;Cover of the issue&ensp;</a></span>
+  </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle07.pdf">&ensp;PDF of the issue&ensp;</a>
+  <a style="float:right;" href="https://pikasle.com/pikasle/portada07.jpg">&ensp;Cover of the issue&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
-  <a href="pikasle/PIkasle08.pdf"><img style="width:90%;" src="pikasle/portada08red.jpg" alt="Cover of Issue N. 8 of PIkasle"/></a>
+  <a href="https://pikasle.com/pikasle/PIkasle08.pdf"><img style="width:90%;" src="pikasle/portada08red.jpg" alt="Cover of Issue N. 8 of PIkasle"/></a>
   <p style="margin:0;text-align:center;"><b>$\pi kasle$ Issue 8<br/>September-October 2012</b>
-  </p><span><a style="float:left;" href="pikasle/PIkasle08.pdf">&ensp;PDF of the issue&ensp;</a>
-  <a style="float:right;" href="pikasle/portada08.jpg">&ensp;Cover of the issue&ensp;</a></span>
+  </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle08.pdf">&ensp;PDF of the issue&ensp;</a>
+  <a style="float:right;" href="https://pikasle.com/pikasle/portada08.jpg">&ensp;Cover of the issue&ensp;</a></span>
   </div>
   <div class="col-md-4" style="text-align:center;">
-  <a href="pikasle/PIkasle09.pdf"><img style="width:90%;" src="pikasle/portada09red.jpg" alt="Cover of Issue N. 9 of PIkasle"/></a>
+  <a href="https://pikasle.com/pikasle/PIkasle09.pdf"><img style="width:90%;" src="pikasle/portada09red.jpg" alt="Cover of Issue N. 9 of PIkasle"/></a>
   <p style="margin:0;text-align:center;"><b>$\pi kasle$ Issue 9<br/>November-December 2013/January 2014</b>
-  </p><span><a style="float:left;" href="pikasle/PIkasle09.pdf">&ensp;PDF of the issue&ensp;</a>
-  <a style="float:right;" href="pikasle/portada09.jpg">&ensp;Cover of the issue&ensp;</a></span>
+  </p><span><a style="float:left;" href="https://pikasle.com/pikasle/PIkasle09.pdf">&ensp;PDF of the issue&ensp;</a>
+  <a style="float:right;" href="https://pikasle.com/pikasle/portada09.jpg">&ensp;Cover of the issue&ensp;</a></span>
   </div>
   </div>
 
@@ -219,23 +219,23 @@
     <p style="margin:0;text-align:center;">
     <b><em>$\pi$ of clubs</em></b>
     </p>
-    <span><a href="pikasle/pi_card.png">&ensp;Link to image&ensp;</a></span>
+    <span><a href="https://pikasle.com/pikasle/pi_card.png">&ensp;Link to image&ensp;</a></span>
     </div>
 
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
-    <a href="pikasle/design2.png"><img style="width:90%;" src="pikasle/design2.png" alt="The Categoricist (by Josué Tonelli-Cueto)"/></a>
+    <a href="https://pikasle.com/pikasle/design2.png"><img style="width:90%;" src="pikasle/design2.png" alt="The Categoricist (by Josué Tonelli-Cueto)"/></a>
     <p style="margin:0;text-align:center;">
     <b><em>The Categoricist</em></b>
     </p>
-    <span><a href="pikasle/design2.png">&ensp;Link to image&ensp;</a></span>
+    <span><a href="https://pikasle.com/pikasle/design2.png">&ensp;Link to image&ensp;</a></span>
     </div>
 
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
-    <a href="pikasle/design3.png"><img style="width:90%;" src="pikasle/design3.png" alt="Doctor Delta (by Josué Tonelli-Cueto)"/></a>
+    <a href="https://pikasle.com/pikasle/design3.png"><img style="width:90%;" src="pikasle/design3.png" alt="Doctor Delta (by Josué Tonelli-Cueto)"/></a>
     <p style="margin:0;text-align:center;">
     <b><em>Doctor Delta</em></b>
     </p>
-    <span><a href="pikasle/design3.png">&ensp;Link to image&ensp;</a></span>
+    <span><a href="https://pikasle.com/pikasle/design3.png">&ensp;Link to image&ensp;</a></span>
     </div>
   </div>
 
