--- a/cv.html
+++ b/cv.html
@@ -750,6 +750,13 @@
       </div></div>
 
       <br/><div class="cv">
+      <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="https://sites.google.com/view/aatrn-tutorial-a-thon">Tutorial-a-thon of the AATRN</a></h4></div>pdf/aatrn-tutorial-a-thon_NSWtheorem.pdf
+       <div class="pretalktitle"></div><div class="talktitle">The Niyogi-Smale-Weinberger Theorem & its relatives<span style="float:right;"><a href="pdf/aatrn-tutorial-a-thon_NSWtheorem.pdf">Slides</a><!--/<a href="">Video</a>--></span></div>
+       <div class="property">Location:</div><div class="value"><a href="https://www.youtube.com/channel/UCYOcatH32zeOTnqjag0fNkw">AATRN YouTube channel</a></div>
+       <div class="property">Date:</div><div class="value">March of 2021</div>
+      </div>
+
+      <br/><div class="cv">
       <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20181207.html">What is the best voting system?</a><span style="float:right;"><a href="https://vimeo.com/305120572">Video</a></span></div>
        <div class="property">Location:</div><div class="value">Berlin, Germany</div>
